<resources>
    <string name="app_name">SocialQR</string>
    <string name="scan">Scan</string>
    <string name="button">Button</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="qr_code_for_the_profile">QR-code for the profile</string>
    <string name="profile_page">Profile page</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile_settings">Profile settings</string>
    <string name="profile">Profile</string>
    <string name="choose_profile_name">Choose profile name</string>
    <string name="fill_in_username">Fill in username</string>
    <string name="add_social_media">Add Social Media</string>
    <string name="social_media">Social Media</string>
    <string name="save_settings">Save Settings</string>
    <string name="write_a_description">Write a description</string>
    <string name="scanned_profile">Scanned profile</string>
    <string name="qr_scanner">QR-scanner</string>
    <string name="settings">Settings</string>
    <string name="save_qr_code">Save QR-code</string>
    <string name="delete_profile">Delete profile</string>
    <string name="no_profile">No profile, please go to settings!</string>

    <string-array name="platform_array">
        <item>Twitter</item>
        <item>TikTok</item>
        <item>Instagram</item>
        <item>Twitch</item>
    </string-array>
</resources>