<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_qr_scan"
            android:icon="@drawable/qr_scan_icon"
            android:title="@string/qr_scanner" />

    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/settings" />

    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_save_qrcode"
            android:icon="@drawable/qr_save_icon"
            android:title="@string/save_qr_code" />

    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_delete_profile"
            android:icon="@drawable/delete_icon"
            android:title="@string/delete_profile" />

    </group>

</menu>